tests-e2e/tests/snapshots/cli__config_file_missing.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: failed to read configuration file missing.json: [FILE NOT FOUND]
