tests-e2e/tests/snapshots/cli__config_invalid.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid configuration in --config: EOF while parsing an object at line 1 column 1
