tests-e2e/tests/snapshots/cli__format_conflicting_modes.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: --write and --check cannot be used together
