tests-e2e/tests/snapshots/cli__format_invalid_source.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: failed to format Invalid.purs: cannot format incomplete NewtypeEquation
