tests-e2e/tests/snapshots/cli__format_mixed_stdin.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: standard input cannot be mixed with file paths
