tests-e2e/tests/snapshots/cli__format_multiple_previews.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: preview mode accepts exactly one file
