tests-e2e/tests/snapshots/cli__format_symlink.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: refusing to rewrite symlink Link.purs
