tests-e2e/tests/snapshots/cli__format_write_stdin.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
error: --write cannot be used with standard input
