tests-e2e/tests/snapshots/cli__help_agent_skills.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Print skills that teach coding agents how to use Iris features.

Usage: iris agent-skills <SUBCOMMAND>

Commands:
  effect  Print the skill for building with native Sync and Async effects.
  help    Print this message or the help of the given subcommand(s)

Flags:
  -h, --help  Print help
--- stderr
