tests-e2e/tests/snapshots/cli__help_agent_skills_effect.snap
---
source: tests-e2e/tests/cli.rs
---
status: 0
--- stdout
Print the skill for building with native Sync and Async effects.

Usage: iris agent-skills effect

Flags:
  -h, --help  Print help
--- stderr
